<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:padding="2dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/nr_adocao"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                    android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_adoption_id_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Vem da BD"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/adotante"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_adopter_name_admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Vem da BD"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginLeft="20dp"/>

                </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/contato"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_telefone_adotante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Vem da bd"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="20dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_see_adoption_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="280dp"
                android:background="@color/blue"
                android:text="@string/btn_ver"
                android:textColor="@color/white"
                android:textSize="10dp"
                android:layout_marginLeft="200dp"
                android:layout_marginBottom="5dp"/>
            </LinearLayout>




    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>